<resources>
    <string name="pull_to_refresh_pull_label">下拉刷新</string>
    <string name="pull_up_refresh_pull_label">上拉加载更多</string>
    <string name="pull_to_refresh_release_label">松开刷新数据</string>
    <string name="pull_up_refresh_release_label">松开加载更多</string>
    <string name="pull_to_refresh_refreshing_label">正在加载…</string>
    <string name="xlistview_footer_hint_loadall">已加载全部</string>
    <string name="voicealert">语音识别由科大讯飞提供</string>
    <string name="app_name">贵人会</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="app_id">5147c7ed</string>
    <string name="just_now">刚刚</string>
    <string name="hour">小时</string>
    <string name="minutes">分</string>
    <string name="second">秒</string>
    <string name="before">前</string>
    <string name="year">年</string>
    <string name="month">月</string>
    <string name="day">日</string>
    <string name="continuetorefresh">下拉可以刷新</string>
    <string name="starttorefresh">松开可以刷新</string>
    <string name="continuetoaddmore">下拉可以加载更多</string>
    <string name="starttoaddmore">松开可以加载更多</string>
    <string name="refreshloading">加载中...</string>
    <string name="updatetime">更新于:</string>
    <string name="network_error">网络连接错误</string>
    <string name="network_wrong">当前网络不可用，请检查你的网络设置</string>
    <string name="unknown_addr">网络连接错误</string>
    <string name="error_host">网络连接错误</string>
    <string name="timeout">网络连接超时</string>
    <string name="load_error">数据加载失败</string>
    <string name="loading_login">登录...</string>
    <string name="authorization_failed">授权失败</string>
    <string name="error_happened">发生错误：</string>
    <string name="login_error">登录失败</string>
    <string name="login_need_contact">这里主打圈子社交，为了给您推荐更多的好友和商务资源，请开启通讯录权限</string>
    <string name="please_input_username">请输入用户名</string>
    <string name="desc"></string>
    <string name="long_ago">很久之前</string>
    <string name="meeting_tab">会议</string>
    <string name="dynamic_tab">动态</string>
    <string name="friend_tab">人脉</string>
    <string name="message_tab">消息</string>
    <string name="hot_spot">动态</string>
    <string name="find_tribe">查找圈子</string>
    <string name="sina_weibo_login">新浪微博登录</string>
    <string name="tencent_qq_login">腾讯QQ登录</string>
    <string name="look_aroud">随便看看</string>
    <string name="one_word_prompt">讲后即焚移动会议专家</string>
    <string-array name="user_protocal_array">
        <item>一、相关定义</item>
        <item>二、用户资格及账户</item>
        <item>三、用户信息保护</item>
        <item>四、用户行为限制</item>
        <item>五、服务条款的修改</item>
        <item>六、服务的中断和终止</item>
        <item>七、知识产权</item>
        <item>八、权利和义务</item>
    </string-array>
    <string name="verify_credit">离成功登录只差一步</string>
    <string name="verify_later">暂不认证</string>
    <string name="please_input_invitation_code">请输入贵人码</string>
    <string name="please_input_mobile_num">请输入手机号</string>
    <string name="please_input_real_name">请输入真实姓名</string>
    <string name="real_name">真实姓名</string>
    <string name="job">职业</string>
    <string name="please_input_company">请输入任职公司名称</string>
    <string name="please_input_post">请输入任职职位</string>
    <string name="apply">申请</string>
    <string name="check_new_version">软件更新提示</string>
    <string name="no_version">当前已经是最新版本！</string>
    <string name="upgrade">更新</string>
    <string name="username">用户名</string>
    <string name="password">密码</string>
    <string name="login">登录</string>
    <string name="exit">退出</string>
    <string name="cancel">取消</string>
    <string name="notification">通知</string>
    <string name="help">使用帮助</string>
    <string name="check_for_updates">检测新版本</string>
    <string name="take_car">趁车</string>
    <string name="meal">点餐</string>
    <string name="my_integration">我的积分</string>
    <string name="my_posts">我的帖子</string>
    <string name="my_message">我的消息</string>
    <string name="my_notification">我的通知</string>
    <string name="my_orders">我的订单</string>
    <string name="my_friends">我的好友</string>
    <string name="add_friend_from_contact">从通讯录添加好友</string>
    <string name="purchase_immunity">购买豁免权</string>
    <string name="id_nums">ID号：</string>
    <string name="user_sign">个性签名</string>
    <string name="synchronous_contact">从通讯录同步名字</string>
    <string name="modify_pwd">修改密码</string>
    <string name="help_center">帮助中心</string>
    <string name="about_us">关于我们</string>
    <string name="logout">退出登录</string>
    <string name="add_more">更多</string>
    <string name="no_more_data">没有更多信息</string>
    <string name="add_more_loading">加载中...</string>
    <string name="edit_profile">编辑资料</string>
    <string name="not_must_input">选填内容</string>
    <string name="please_input">请输入</string>
    <string name="profile_is_new">资料未做任何更改</string>
    <string name="upload_loading">正在上传...</string>
    <string name="upload_success">上传成功</string>
    <string name="upload_failed">上传失败</string>
    <string name="add_friend">添加好友</string>
    <string name="search_result">搜索结果</string>
    <string name="cancel_friend">取消好友</string>
    <string name="contact_invite_prompt">还未开通熟人啦，你要邀请TA么？</string>
    <string name="sms_content">我邀请你加入熟人APP，这里有更多精彩等着你</string>
    <string name="loading_location">正在定位...</string>
    <string name="reset_password_success">重置密码成功</string>
    <string name="reset_password_failed">重置密码失败</string>
    <string name="reset_pwd_loading">重置密码...</string>
    <string name="reset">重置</string>
    <string name="exception_out_of_memory">图片太大，处理失败！</string>
    <string name="sms_code_has_been_sent">短信验证码已发送，请注意查收</string>
    <string name="search_friend_by_nickname">搜索手机号或昵称</string>
    <string name="delete_group_prompt">确认删除</string>
    <string name="send_friend_apply_success">成功发送好友申请</string>
    <string name="send_friend_apply_failed">发送好友申请失败</string>
    <string name="send">发送</string>
    <string name="send_text">发送文本</string>
    <string name="send_voice">发送语音</string>
    <string name="search">搜索</string>
    <string name="whether_to_resend">是否重新发送</string>
    <string name="operate_success">操作成功</string>
    <string name="pass">暂不处理</string>
    <string name="save_picture_prompt">是否将图片保存到相册</string>
    <string name="save_success">保存成功</string>
    <string name="order_has_copied">已复制订单号</string>
    <string name="save_picture_to_ablun">已成功保存至相册</string>
    <string name="modity_success">修改成功</string>
    <string name="resend_">重新发送....:</string>
    <string name="resend_failed">重发失败!</string>
    <string name="download_voice">下载音频</string>
    <string name="download_voice_error">网络链接出错，请重试</string>
    <string name="system_can_not_cache">该系统不支持缓存功能</string>
    <string name="pressed_to_record">按住 说话</string>
    <string name="input_message_hint">输入消息</string>
    <string name="get_voice">发送了一条语音</string>
    <string name="get_location">发来位置信息</string>
    <string name="record_time_too_short">录制时间小于1秒</string>
    <string name="record_time_too_long">录制时间超过60秒</string>
    <string name="record_failed">录音失败!</string>
    <string name="file_not_exist">文件不存在</string>
    <string name="has_added">已同意</string>
    <string name="has_refused">已拒绝</string>
    <string name="agreed_add_friend">是否同意添加好友</string>
    <string name="agree">同意</string>
    <string name="refuse">拒绝</string>
    <string name="camera">拍照</string>
    <string name="gallery">相册</string>
    <string name="feedback_success">反馈成功</string>
    <string name="feedback_fail">反馈失败</string>
    <string name="input_feedback_content">请填写反馈内容</string>
    <string name="add_block_success">添加成功</string>
    <string name="add_block_failed">添加失败</string>
    <string name="delete_friend_prompt">确定删除该好友?</string>
    <string name="delete_friend_success">删除成功</string>
    <string name="delete_friend_failed">删除失败</string>
    <string name="reported_content">举报内容</string>
    <string name="input_reported_content">请填写举报内容</string>
    <string name="reported_friend_success">举报成功</string>
    <string name="reported_friend_failed">举报失败</string>
    <string name="cancel_block_success">取消成功</string>
    <string name="cancel_block_failed">取消失败</string>
    <string name="copyright">Copyright © 2014 Guiren.All Rights Reserved</string>
    <string name="ok">确定</string>
    <string name="toast_sdcard_mounted">SD卡拔出，不能使用某些功能!</string>
    <string name="toast_sdcard_available">SD卡存储空间不足!</string>
    <string name="code_left_seconds">剩余</string>
    <string name="nickname">昵称</string>
    <string name="reply_hint">回复...</string>
    <string name="reply">回复</string>
    <string name="send_loading">提交中...</string>
    <string name="send_comment_success">评论成功</string>
    <string name="send_comment_failed">评论失败</string>
    <string name="please_input_comment_content">请输入评论内容</string>
    <string name="reply_comment_success">回复评论成功</string>
    <string name="reply_comment_failed">回复评论失败</string>
    <string name="reply_comment">回复评论</string>
    <string name="invite">邀请</string>
    <string name="contact_friend">通讯录朋友</string>
    <string name="user_sign_hint">个性签名...</string>
    <string name="user_header">头像</string>
    <string name="sex">性别</string>
    <string name="male">男</string>
    <string name="female">女</string>
    <string name="add_zan_success">添加赞成功</string>
    <string name="add_zan_failed">添加赞失败</string>
    <string name="add_favorite_success">添加收藏成功</string>
    <string name="add_favorite_failed">添加收藏失败</string>
    <string name="cancel_favorite_success">取消收藏成功</string>
    <string name="cancel_favorite_failed">取消收藏失败</string>
    <string name="give_hime_message">给TA消息</string>
    <string name="profile">个人中心</string>
    <string name=" my_profile">我的资料</string>
    <string name="profile_other">详细资料</string>
    <string name="save">保存</string>
    <string name="reported">举报</string>
    <string name="markname">备注名</string>
    <string name="remark_friend_success">修改备注名成功</string>
    <string name="remark_friend_failed">修改备注名失败</string>
    <string name="rotate_image">旋转图片</string>
    <string name="my_comment_list">回复</string>
    <string name="give_nice">给个好评</string>
    <string name="view_text_version">查看文字版</string>
    <string name="play_by_sequence">顺序播放</string>
    <string name="tribe_setting">圈子设置</string>
    <string name="server_tel_prompt">客服电话：</string>
    <string name="website_prompt">官方网站：</string>
    <string name="server_tel">400-806-1096</string>
    <string name="website">http://guirenhui.cn</string>
    <string name="user_qq_group">用户QQ群</string>
    <string name="server_qq">客服QQ</string>
    <string name="server_wechat_cliend">客服微信号</string>
    <string name="sina_weibo">新浪微博</string>
    <string name="project_secretary">站内小秘书</string>
    <string name="download_app_address_qr_code">产品下载地址</string>
    <string name="user_qq_group_value">205428019</string>
    <string name="server_qq_value">1846461517</string>
    <string name="server_wechat_cliend_value">贵人 (guirenhui111)</string>
    <string name="sina_weibo_value">贵人汇</string>
    <string name="clear_cache">清空缓存</string>
    <string name="private_setting">隐私设置</string>
    <string name="exit_login">退出登录</string>
    <string name="receive_msg_notify">新消息提醒</string>
    <string name="create_meeting">创建会议</string>
    <string name="create_tribe">创建圈子 </string>
    <string name="feedback">反馈意见</string>
    <string name="share_wechat">微信好友</string>
    <string name="share_wechat_group">微信朋友圈</string>
    <string name="share_weibo">微博</string>
    <string name="share_guiren_dy">贵人动态</string>
    <string name="share_qq">QQ好友</string>
    <string name="share_qq_zone">QQ空间</string>
    <string name="send_dynamic">发布动态</string>
    <string name="rp_yellow">色情</string>
    <string name="rp_cheat">欺诈骗钱</string>
    <string name="rp_abuse">诅咒谩骂</string>
    <string name="rp_ad">广告骚扰</string>
    <string name="rp_politics">政治</string>
    <string name="rp_chose_reason">请选择投诉原因</string>
    <string name="rp_ok">点击举报</string>
    <string name="scan_and_scan">扫一扫</string>
</resources>