<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/background_style"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:scrollbars="none" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <LinearLayout
            android:id="@+id/logolayout"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <ImageView
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="20dp"
                android:contentDescription="@string/desc"
                android:src="@drawable/logo" />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:gravity="center"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/app_name"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/version"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginLeft="5dp"
                    android:textColor="@color/about_blue_text_color"
                    android:textSize="18sp"
                    android:textStyle="bold" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="20dp"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="@dimen/about_item_height"
                android:background="@drawable/selector_btn_general"
                android:padding="@dimen/general_paading" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="left"
                    android:text="@string/user_qq_group" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="right"
                    android:text="@string/user_qq_group_value"
                    android:textColor="@color/content_gray_color" />
            </LinearLayout>

            <View style="@style/general_thin_divider_in_white" />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="@dimen/about_item_height"
                android:background="@drawable/selector_btn_general"
                android:padding="@dimen/general_paading" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="left"
                    android:text="@string/server_qq" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="right"
                    android:text="@string/server_qq_value"
                    android:textColor="@color/content_gray_color" />
            </LinearLayout>

            <View style="@style/general_thin_divider_in_white" />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="@dimen/about_item_height"
                android:background="@drawable/selector_btn_general"
                android:padding="@dimen/general_paading" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="left"
                    android:text="@string/server_wechat_cliend" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="right"
                    android:text="@string/server_wechat_cliend_value"
                    android:textColor="@color/content_gray_color" />
            </LinearLayout>

            <View style="@style/general_thin_divider_in_white" />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="@dimen/about_item_height"
                android:background="@drawable/selector_btn_general"
                android:padding="@dimen/general_paading" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="left"
                    android:text="@string/sina_weibo" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="right"
                    android:text="@string/sina_weibo_value"
                    android:textColor="@color/content_gray_color" />
            </LinearLayout>

            <View style="@style/general_thin_divider_in_white" />

            <TextView
                android:id="@+id/project_secretary_layout"
                style="@style/about_item"
                android:text="@string/project_secretary" />

            <View style="@style/general_thin_divider_in_white" />

            <TextView
                android:id="@+id/tv_qrcode"
                style="@style/about_item"
                android:text="@string/download_app_address_qr_code" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            android:gravity="center_horizontal"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/server_tel_prompt"
                    android:textColor="@color/one_word_prompt_color"
                    android:textSize="12.0sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/server_tel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="2dp"
                    android:text="@string/server_tel"
                    android:textColor="@color/about_blue_text_color"
                    android:textSize="12.0sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/website_prompt"
                    android:textColor="@color/one_word_prompt_color"
                    android:textSize="12.0sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/website"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="2dp"
                    android:text="@string/website"
                    android:textColor="@color/about_blue_text_color"
                    android:textSize="12.0sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <TextView
                android:id="@+id/website"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="2dp"
                android:text="@string/voicealert"
                android:textColor="@color/copyright_text_color"
                android:textSize="10.0sp" />
        </LinearLayout>

        <RelativeLayout
            android:id="@+id/bottomlayout"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="30dp"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/copyright"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:text="@string/copyright"
                android:textColor="@color/copyright_text_color"
                android:textSize="13sp" />
        </RelativeLayout>
    </LinearLayout>

</ScrollView>